--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link href="style.css" rel="stylesheet">
   <link href="base.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
   <title>My First Portfolio - Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body class="works_on_smartphone">
   <header>
     <h1>Welcome to My Portfolio</h1>
     <h2>Showcasing projects and thoughts</h2>
