--- a/CSS Advanced/index.html
+++ b/CSS Advanced/index.html
@@ -21,8 +21,8 @@
 
 </header>
 <main>
-    <section>
-        <div>
+    <section class="landing">
+        <div class="main-title">
             <h1>Get schooled</h1>
             <span>SMILES</span>
             <span>GRIN</span>
@@ -65,149 +65,149 @@
             <P>weather presenter</P>
         </div>
     </section>
-    <section>
-        <h2>Most popular tutorials</h2>
-        <div>
-            <img src="./image/6.png" alt="">
-            <h3>Diagonal Smile</h3>
-            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-            <div>
-                <img src="./image/7.png" alt="">
-                <h4>Phillip Massey</h4>
-            </div>
-            <div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-            </div>
-            <p>8 min</p>
-        </div>
-        <div>
-            <img src="./image/8.png" alt="">
-            <h3>Happy Smile</h3>
-            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-            <div>
-                <img src="./image/9.png" alt="">
-                <h4>Phillip Massey</h4>
-            </div>
-            <div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-            </div>
-            <p>8 min</p>
-        </div>
-        <div>
-            <img src="./image/1.png" alt="">
-            <h3>Natural Smile</h3>
-            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-            <div>
-                <img src="./image/1.png" alt="">
-                <h4>Phillip Massey</h4>
-            </div>
-            <div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-            </div>
-            <p>8 min</p>
-        </div>
-        <div>
-            <img src="./image/1.png" alt="">
-            <h3>Sad Smile</h3>
-            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-            <div>
-                <img src="./image/1.png" alt="">
-                <h4>Phillip Massey</h4>
-            </div>
-            <div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-                <div><i class="fa-solid fa-star"></i></div>
-            </div>
-            <p>8 min</p>
-        </div>
-    </section>
-    <section>
-        <h2>Free membership</h2>
-        <div>
-            <img src="./image/smile.png" alt="">
-            <h3>Lorem Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div>
-            <img src="./image/smile.png" alt="">
-            <h3>Lorem Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div>
-            <img src="./image/smile.png" alt="">
-            <h3>Lorem Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div>
-            <img src="./image/smile.png" alt="">
-            <h3>Lorem Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <button>REGISTER FOR FREE</button>
-    </section>
-    <section>
-        <h2>F.A.Q</h2>
-        <div>
-            <div>
-                <div>
-                    <h3>How does this work?</h3>
-                </div>
-                <div>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </div>
+<!--    <section>-->
+<!--        <h2>Most popular tutorials</h2>-->
+<!--        <div>-->
+<!--            <img src="./image/6.png" alt="">-->
+<!--            <h3>Diagonal Smile</h3>-->
+<!--            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>-->
+<!--            <div>-->
+<!--                <img src="./image/7.png" alt="">-->
+<!--                <h4>Phillip Massey</h4>-->
+<!--            </div>-->
+<!--            <div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--            </div>-->
+<!--            <p>8 min</p>-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <img src="./image/8.png" alt="">-->
+<!--            <h3>Happy Smile</h3>-->
+<!--            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>-->
+<!--            <div>-->
+<!--                <img src="./image/9.png" alt="">-->
+<!--                <h4>Phillip Massey</h4>-->
+<!--            </div>-->
+<!--            <div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--            </div>-->
+<!--            <p>8 min</p>-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <img src="./image/1.png" alt="">-->
+<!--            <h3>Natural Smile</h3>-->
+<!--            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>-->
+<!--            <div>-->
+<!--                <img src="./image/1.png" alt="">-->
+<!--                <h4>Phillip Massey</h4>-->
+<!--            </div>-->
+<!--            <div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--            </div>-->
+<!--            <p>8 min</p>-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <img src="./image/1.png" alt="">-->
+<!--            <h3>Sad Smile</h3>-->
+<!--            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>-->
+<!--            <div>-->
+<!--                <img src="./image/1.png" alt="">-->
+<!--                <h4>Phillip Massey</h4>-->
+<!--            </div>-->
+<!--            <div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--                <div><i class="fa-solid fa-star"></i></div>-->
+<!--            </div>-->
+<!--            <p>8 min</p>-->
+<!--        </div>-->
+<!--    </section>-->
+<!--    <section>-->
+<!--        <h2>Free membership</h2>-->
+<!--        <div>-->
+<!--            <img src="./image/smile.png" alt="">-->
+<!--            <h3>Lorem Ipsum</h3>-->
+<!--            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <img src="./image/smile.png" alt="">-->
+<!--            <h3>Lorem Ipsum</h3>-->
+<!--            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <img src="./image/smile.png" alt="">-->
+<!--            <h3>Lorem Ipsum</h3>-->
+<!--            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <img src="./image/smile.png" alt="">-->
+<!--            <h3>Lorem Ipsum</h3>-->
+<!--            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>-->
+<!--        </div>-->
+<!--        <button>REGISTER FOR FREE</button>-->
+<!--    </section>-->
+<!--    <section>-->
+<!--        <h2>F.A.Q</h2>-->
+<!--        <div>-->
+<!--            <div>-->
+<!--                <div>-->
+<!--                    <h3>How does this work?</h3>-->
+<!--                </div>-->
+<!--                <div>-->
+<!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.-->
+<!--                </div>-->
 
-                <div>
-                    <h3>How does this work?</h3>
-                </div>
-                <div>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </div>
-            </div>
-            <div>
-                <div>
-                    <h3>How does this work?</h3>
-                </div>
-                <div>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </div>
-                <div>
-                    <h3>How does this work?</h3>
-                </div>
-                <div>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </div>
-            </div>
-        </div>
-    </section>
-</main>
-<footer>
-    <section>
-        <div>
-            <img src="./image/logo.png" alt="logo">
-            <div>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-instagram"></i>
-            </div>
-        </div>
-        <p>©smileschool 2020</p>
-    </section>
-</footer>
+<!--                <div>-->
+<!--                    <h3>How does this work?</h3>-->
+<!--                </div>-->
+<!--                <div>-->
+<!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div>-->
+<!--                <div>-->
+<!--                    <h3>How does this work?</h3>-->
+<!--                </div>-->
+<!--                <div>-->
+<!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.-->
+<!--                </div>-->
+<!--                <div>-->
+<!--                    <h3>How does this work?</h3>-->
+<!--                </div>-->
+<!--                <div>-->
+<!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
+<!--</main>-->
+<!--<footer>-->
+<!--    <section>-->
+<!--        <div>-->
+<!--            <img src="./image/logo.png" alt="logo">-->
+<!--            <div>-->
+<!--                <i class="fa-brands fa-facebook"></i>-->
+<!--                <i class="fa-brands fa-twitter"></i>-->
+<!--                <i class="fa-brands fa-instagram"></i>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <p>©smileschool 2020</p>-->
+<!--    </section>-->
+<!--</footer>-->
 </body>
 </html>
 
