compelet the other sections

--- a/CSS Advanced/index.html
+++ b/CSS Advanced/index.html
@@ -10,8 +10,9 @@
 <body>
 <header>
     <nav>
-        <img src="./image/logo.png" alt="logo">
-
+        <div class="logo">
+        <img src="./image/logo.png" alt="logo" >
+        </div>
         <ul>
             <li><a href="#">COURSE</a></li>
             <li><a href="#">PRICING</a></li>
@@ -21,13 +22,13 @@
 
 </header>
 <main>
-    <section class="landing">
+    <section class="banner">
         <div class="main-title">
             <h1>Get schooled</h1>
             <span>SMILES</span>
             <span>GRIN</span>
             <span>LAUGH</span>
-            <button>REGISTER FOR FREE</button>
+            <button class="btn">REGISTER FOR FREE</button>
         </div>
         <div>
             <h2>Learn from the pros</h2>
