change some styles

--- a/CSS Advanced/index.html
+++ b/CSS Advanced/index.html
@@ -67,7 +67,7 @@
         </div>
     </section>
     <section>
-        <h2>Most popular tutorials</h2>
+        <h2>Most <span>popular</span> tutorials</h2>
         <div>
             <img src="./image/6.png" alt="">
             <h3>Diagonal Smile</h3>
@@ -138,7 +138,7 @@
         </div>
     </section>
     <section>
-        <h2>Free membership</h2>
+        <h2><span >Free</span> membership</h2>
         <div>
             <img src="./image/smile.png" alt="">
             <h3>Lorem Ipsum</h3>
